--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</nav>
 			</div>
 			<div>
-				<h1>Здоровенный Хуй.jpg</h1>
+				<img src="" alt="ЗдоровеННый Хуй.jpg">
 			</div>
 			<div class="slick">
 				<div class="slick-block">
